--- a/index.html
+++ b/index.html
@@ -1,68 +1,47 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>دردشة ذكاء اصطناعي - تجربة بسيطة</title>
+  <meta charset="utf-8" />
+  <title>دردشة AI - تجربة محلية</title>
   <style>
-    :root{--bg:#f4f7fb;--card:#fff;--accent:#0b6ef0;--muted:#6b7280}
-    *{box-sizing:border-box}
-    body{font-family:Tahoma, Arial, sans-serif;background:var(--bg);margin:0;padding:20px;color:#0b1220}
-    .wrap{max-width:820px;margin:18px auto}
-    header{background:linear-gradient(90deg,var(--accent),#0a58c7);color:#fff;padding:18px;border-radius:12px}
-    h1{margin:0;font-size:20px}
-    .card{background:var(--card);padding:14px;border-radius:10px;margin-top:14px;box-shadow:0 8px 28px rgba(2,6,23,0.06)}
-    .chat{height:420px;overflow:auto;padding:12px;border-radius:8px;border:1px solid #e6eefc;background:#f9fbff}
-    .msg{max-width:78%;padding:10px 12px;margin:8px 0;border-radius:10px;line-height:1.35}
-    .user{margin-left:auto;background:#0b75ef;color:#fff;border-bottom-right-radius:2px}
-    .bot{margin-right:auto;background:#eef3ff;color:#0b1220;border-bottom-left-radius:2px}
-    .meta{font-size:12px;color:var(--muted);margin-bottom:8px}
-    .controls{display:flex;gap:8px;margin-top:12px}
-    input[type=text]{flex:1;padding:10px;border-radius:8px;border:1px solid #d6e4ff}
-    button{background:var(--accent);color:#fff;border:none;padding:10px 14px;border-radius:8px;cursor:pointer}
-    footer{margin-top:12px;text-align:center;color:var(--muted);font-size:13px}
-    .small{font-size:13px;color:var(--muted)}
-    pre{background:#f2f6fb;padding:8px;border-radius:6px;overflow:auto}
+    body{font-family:Tahoma, Arial, sans-serif;background:#f4f7fb;padding:18px;color:#0b1220}
+    .wrap{max-width:760px;margin:12px auto}
+    h1{margin:0 0 10px}
+    #chat{background:#fff;border-radius:10px;padding:12px;height:420px;overflow:auto;border:1px solid #e6eefc}
+    .msg{margin:8px 0;padding:10px;border-radius:8px;max-width:80%}
+    .user{background:#0b75ef;color:#fff;margin-left:auto;text-align:left;border-bottom-right-radius:2px}
+    .bot{background:#eef3ff;color:#0b1220;margin-right:auto;text-align:right;border-bottom-left-radius:2px}
+    .controls{display:flex;gap:8px;margin-top:10px}
+    input{flex:1;padding:10px;border-radius:8px;border:1px solid #d6e4ff}
+    button{padding:10px 14px;border-radius:8px;border:none;background:#0b6ef0;color:#fff;cursor:pointer}
+    .small{font-size:13px;color:#667085;margin-top:8px}
   </style>
 </head>
 <body>
   <div class="wrap">
-    <header>
-      <h1>دردشة ذكاء اصطناعي — تجربة بسيطة</h1>
-      <div class="small">واجهة تجريبية محلية: تقدر تجربها بدون ربط بخدمة خارجية</div>
-    </header>
+    <h1>دردشة الذكاء الاصطناعي — تجربة محلية</h1>
+    <div class="small">ملاحظة: هذا الملف يحتوي طلبات مباشرة إلى OpenAI — آمن فقط إذا شغّلته على جهازك ولم ترفعه إلى أي مكان.</div>
 
-    <div class="card">
-      <div class="meta">ملاحظة: هذه نسخة محلية تجريبية — استبدل الجزء الخاص بـ <code>simulateBotResponse()</code> بواجهة حقيقية لاحقاً.</div>
+    <div id="chat" aria-live="polite"></div>
 
-      <div id="chat" class="chat" aria-live="polite"></div>
-
-      <div class="controls">
-        <input id="input" type="text" placeholder="اكتب سؤالك عن الذكاء الاصطناعي...">
-        <button id="send">إرسال</button>
-      </div>
-
-      <div style="margin-top:10px" class="small">أمثلة: "ما هو التعلم الآلي؟" — "كيف أبدأ مشروع ذكاء اصطناعي بسيط؟"</div>
-
-      <pre style="margin-top:12px">ملاحظة تقنية: لو حبيت توصل الواجهة لـ OpenAI API لاحقاً، استخدم fetch إلى خادوم (server) آمن لا تكشف مفاتيح API في واجهة المستخدم.</pre>
-
-      <div style="display:flex;gap:8px;margin-top:12px">
-        <button id="download">تحميل الصفحة (HTML)</button>
-        <button id="clear">مسح الدردشة</button>
-      </div>
+    <div class="controls">
+      <input id="input" placeholder="اكتب سؤالك..." />
+      <button id="send">إرسال</button>
     </div>
 
-    <footer>لو عايزني أوصّلها لواجهة حقيقية أو أعمل تصميم أحلى، قلّي: "ربط API" أو "تجميل الواجهة".</footer>
+    <div style="margin-top:10px" class="small">لو ظهر خطأ CORS شغّل صفحة الواجهة عبر سيرفر محلي (مثلاً: <code>python -m http.server 8080</code> ثم افتح http://localhost:8080/index_local_key.html).</div>
   </div>
 
   <script>
+    // ======== ضع مفتاحك هنا ========
+    const API_KEY = "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";
+    // ===============================
+
     const chat = document.getElementById('chat');
     const input = document.getElementById('input');
     const send = document.getElementById('send');
-    const clear = document.getElementById('clear');
-    const download = document.getElementById('download');
 
-    function appendMessage(text, cls){
+    function append(text, cls){
       const d = document.createElement('div');
       d.className = 'msg ' + cls;
       d.textContent = text;
@@ -70,59 +49,55 @@
       chat.scrollTop = chat.scrollHeight;
     }
 
-    function simulateTyping(text, cb){
-      // محاكاة كتابة بسيطة
-      const placeholder = document.createElement('div');
-      placeholder.className = 'msg bot';
-      placeholder.textContent = '...';
-      chat.appendChild(placeholder);
-      chat.scrollTop = chat.scrollHeight;
-      setTimeout(() => {
-        placeholder.remove();
-        cb(text);
-      }, 700 + Math.min(1500, text.length*30));
-    }
-
-    function simulateBotResponse(userText){
-      // استبدل هذا الجزء بطلب إلى خادوم يحوي مفتاح API لو حبيت
-      const lower = userText.toLowerCase();
-      if(lower.includes('ما هو') || lower.includes('ماهي') || lower.includes('ما هو')){
-        return 'الذكاء الاصطناعي هو مجال يهتم بتصميم أنظمة قادرة على أداء مهام تتطلب ذكاءً بشرياً، مثل التعلم، الاستدلال، والتعرّف.';
-      }
-      if(lower.includes('كيف') || lower.includes('ازاى') || lower.includes('ابدأ')){
-        return 'ابدأ بتعلّم أساسيات البرمجة والرياضيات (الجبر والإحصاء)، ثم جرّب مكتبات مثل Python وscikit-learn وTensorFlow.';
-      }
-      return 'دي إجابة تجريبية: ' + userText + ' — لو عايز إجابات أعمق أو ربط حقيقي بالـ API ابعتلي وانا أعدّهالك.';
-    }
-
-    send.addEventListener('click', () => {
+    async function sendMessage(){
       const text = input.value.trim();
       if(!text) return;
-      appendMessage(text, 'user');
+      append(text, 'user');
       input.value = '';
-      // استدعاء المحاكاة
-      const botReply = simulateBotResponse(text);
-      simulateTyping(botReply, (txt)=> appendMessage(txt, 'bot'));
-    });
 
-    input.addEventListener('keydown', (e)=>{
-      if(e.key === 'Enter') send.click();
-    });
+      append('جاري الرد...', 'bot');
 
-    clear.addEventListener('click', ()=>{ chat.innerHTML = ''; appendMessage('مرحبا! ابدأ بسؤال أو ملاحظة.', 'bot'); });
+      try {
+        const resp = await fetch("https://api.openai.com/v1/chat/completions", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+            "Authorization": `Bearer ${API_KEY}`
+          },
+          body: JSON.stringify({
+            model: "gpt-3.5-turbo",
+            messages: [{ role: "user", content: text }],
+            max_tokens: 500,
+            temperature: 0.7
+          })
+        });
 
-    // زر تحميل الصفحة نفسها
-    download.addEventListener('click', (ev)=>{
-      const html = document.documentElement.outerHTML;
-      const blob = new Blob([html], {type: 'text/html'});
-      const url = URL.createObjectURL(blob);
-      const a = document.createElement('a');
-      a.href = url; a.download = 'ai-chat-experiment.html';
-      document.body.appendChild(a); a.click(); a.remove(); URL.revokeObjectURL(url);
-    });
+        const data = await resp.json();
+        // إزالة رسالة "جاري الرد..."
+        const last = chat.querySelectorAll('.bot');
+        if(last.length) last[last.length-1].remove();
 
-    // بدء تحيّة ابتدائية
-    appendMessage('مرحبا! ابدأ بسؤال أو ملاحظة.', 'bot');
+        if(resp.ok && data.choices && data.choices[0] && data.choices[0].message){
+          append(data.choices[0].message.content.trim(), 'bot');
+        } else {
+          append('لم يصل رد من الخادم. تحقق من المفتاح أو الرسائل في الكونسول.', 'bot');
+          console.error(data);
+        }
+      } catch (err) {
+        // إزالة رسالة "جاري الرد..."
+        const last = chat.querySelectorAll('.bot');
+        if(last.length) last[last.length-1].remove();
+
+        append('حدث خطأ: ' + (err.message || err), 'bot');
+        console.error(err);
+      }
+    }
+
+    send.addEventListener('click', sendMessage);
+    input.addEventListener('keydown', (e)=>{ if(e.key === 'Enter') sendMessage(); });
+
+    // رسالة ترحيب
+    append('مرحبا! ابدأ بكتابة سؤالك.', 'bot');
   </script>
 </body>
 </html>
